<resources>
    <string name="app_name">الدخيل</string>

    <string name="please_wait">الرجاء الانتظار</string>

    <string name="connection_err">خطأ في الاتصال، الرجاء المحاولة مجددا</string>

    <string name="price_format">%.2f ريال</string>
    <string name="seen_count_format">عدد المشاهدات: %d</string>
    <string name="status_format">حالة التوفر: %s</string>
    <string name="total_price_format">السعر الاجمالي: %.2f ريال</string>
    <string name="type_format">النوع: %s</string>

    <string name="cart_price_format">السعر: %.2f ريال</string>
    <string name="cart_quantity">الكمية: %d</string>

    <string name="id_format">رقم الطلب: %d</string>
    <string name="order_date_format">تاريخ الطلب: %s</string>
    <string name="pay_method_format">طريقة الدفع: %s</string>
    <string name="shipping_method_format">طريقة الشحن: %s</string>
    <string name="order_status_format">حالة الطلب: %s</string>
    <string name="note_format">ملاحظة: %s</string>

    <string name="return_policy">

        الإستبدال والإسترجاع

        \n

يضمن متجر الدخيل للاوني المنزلية أن جميع المنتجات جديدة، غير مستعملة، وغير تالفة. مع ذلك، لو تم وجود أي تلف في المنتج، نرجو منك إبلاغنا خلال ثلاث أيام من استلام المنتج. سوف يقوم المتجر باستبدال المنتج بدون تكلفة.
\n

سياسة الاستبدال والاسترجاع
\n

1.   يمكن للعميل أن يسترجع أو يستبدل البضاعة المشتراة خلال ثلاثة ايام من استلام البضاعة على أن تكون البضاعة المسترجعة أو المستردة كاملة وفي الكراتين الأصلية. ويجب أن يرفق بها كافة الإكسسوارات الملحقة.
\n
2.    كذلك يجب إرفاق جميع المستندات التي تم تسليمها في أو مع الشحنة الأصلية مثل الكتيبات، إرشادات الاستعمال، وغيرها.
\n
3.    في حالة عدم توفر نفس الصنف المرتجع في المخزون، يخير العميل إما باستلام بضاعة مشابهة أو أفضل كبديل أو انتظار توريد البضاعة الجديدة أو استلام اعتماد مالي (سند استلام) بالمبلغ الكامل للبضاعة.
\n
4.   سوف تتكفل الشركة بنفقات الشحن في حال وجود خلل مصنعي تقدره الشركة أو إذا كانت البضاعة تالفة أو خاطئة بشرط ان لا تتجاوز المدة ثلاثة ايام بعد استلام المنتج. اما في حالة رغبة العميل بتبديل اللون او تغيرت رغبة العميل بشكل عام فإن العميل يتكفل بتكاليف الشحن كاملةً ويمكنكم ابلاغنا عن طريق الرابط التالي
\n
5.   يتم استرداد قيمة البضاعة المعادة بإصدار شيك بإسم العميل أو تحويل المبلغ إلى حسابه وذلك خلال ١٠ أيام من تاريخ رد البضاعة. وفي حالة استخدام البطاقة الإئتمانية في الشراء سيتم إعادة قيمتها إلى حساب البطاقة الإئتمانية نفسه.
\n

طريقة الاسترجاع والاستبدال:
\n

يتم ارسال بوليصة شحن الى ايميل العميل لذلك يجب أن يكون الايميل صحيحاً عند الطلب وفي حالة لم يكن صحيحاً يرجى التواصل مع المتجر من خلال الاميل
\n
store@aldekhel.sa
\n
 ومن ثم يتم طباعتها والصاقها على الشحنة وتسليمها لأقرب فرع لسمسا اكسبرس .
\n

 الضمان للأجهزة الكهربائية:
\n
فترة الضمان لكل الاجهزة الكهربائية هي سنتين .
\n
في حال تعطل المنتج عن العمل خلال فترة سريان الضمان يتحمل العميل تكاليف الشحن كاملةً  وتكون المدة لعمل الصيانة بعد استلام المنتج من العميل 14 يوم. ويلتزم المتجر بصيانة اجهزة (هوست Host)  فقط وبالنسبة للاجهزة الاخرى يمكن للعميل ارسالها الى الوكيل
\n

    </string>


    <string name="terms">


•      معلومات عن عمليات البيع والشراء وتاريخ الحساب.
\n
•      معلومات من أطراف ثالثة تقوم بالتصديق عليها والموافقة على تزويدنا بها.
\n
•      معلومات من أطراف ثالثة يتم إدخالها بشكل غير مباشر للتأكد من صحة المستخدم ولمنع أي نصب أو إحتيال.
\n
•      معلومات يتم إدخالها على الموقع، من خلال تخزين معلوماتك الشخصية من غير استكمال أو تقديم نموذج.
\n
•      معلومات تقوم بتزويدنا بها على الموقع، من خلال استمارات ونماذج مكتوبة وغيرها من أشكال إدخال البيانات.
\n
نقوم بالحصول على تلك المعلومات الشخصية والسرية من خلال المصادر التالية:
\n
•      نحن نستخدم الكوكيز؛ وهي عبارة عن ملفات نصية صغيرة يتم تخزينها على جهاز الكمبيوتر الخاص بالعميل لأغراض حفظ السجلات. وقد تكون المعلومات التي تم تجميعها وتخزينها من خلال الكوكيز ضد البيانات الشخصية التي نحتفظ بها على أنظمتنا.
\n
•      يجوز لنا مشاركة هذه البيانات مع خدمات إدارة الاحتيال المتخصصة والجديرة بالثقة التي تساعدنا على تحليل هذه البيانات.
\n
•      تجميع بيانات الاستخدام والوصول التي تسمح لنا بمنع فتح الحسابات المتعددة أو السلوكيات الاحتيالية أو لحماية أنظمتنا ضد الاعتداءات الغير مشروعة.
\n
•      تسجيل وتخزين عنوان الـ اي بي الخاص بك وعدد مرات دخولك على الموقع.
\n
عند إتمام عملية التسجيل، يمكنك البدء في الشراء من المتجر المحمي بشكل صارم ضد عمليات الاحتيال والإيذاء من خلال الإجراءات التالية:
\n
الإجراءات الأمنية:
\n

•      معلومات مالية مثل: بطاقة الائتمان/الخصم، أو تفاصيل الحساب المصرفي في بعض المعاملات.
\n
•      اسمك، العنوان، البريد الإلكتروني، رقم الهاتف، وغيرها من المعلومات الأساسية.
\n
المعلومات الشخصية التي نجمعها:
\n
عند فتح حساب جديد على المتجر، نقوم بطلب مجموعة من البيانات الشخصية للعميل، حيث يجب إكمال تلك البيانات بطريقة صحيحة لإتمام عملية التسجيل على الموقع وللتأكد من عدم وجود أي معلومات كاذبة أو مضللة.
\n
كيفية حصولنا على المعلومات الشخصية للعملاء
\n
يلتزم متجر الدخيل للاوني إلى أقصى درجة بحماية بياناتك الشخصية، ومن خلال قبولكم لسياسة الخصوصية الخاصة بعملاء المتجر ، فإنكم تسمحون لنا بجمع واستخدام والكشف عن المعلومات الشخصية الخاصة بك فقط وفقاً لسياسة الخصوصية وبشكل محدود جداً. يرجى العلم بأنه لن يتم أبداً بيع أو إستخدام أو عرض بياناتك الشخصية إلى أية جهة بمقابل أو بدون مقابل.
\n



    </string>

</resources>
