<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/tvCategory"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="معلومات الطلب"/>

            <View
                android:layout_margin="10dp"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent"/>

        </FrameLayout>

        <LinearLayout
            android:gravity="right"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/id_format"/>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/order_date_format"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPaymentMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/pay_method_format"/>

            <TextView
                android:gravity="right"
                android:id="@+id/tvShippingMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/shipping_method_format"/>

        </LinearLayout>


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="عنوان الدفع"/>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/tvPaymentAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="عنوان الدفع"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="عنوان الشحن"/>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/tvShippingAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="عنوان الشحن"/>


        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_status_format"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/tvNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_format"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="المنتجات"/>



        <LinearLayout
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="right"
                android:layout_weight=".3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="السعر الاجمالي"/>

            <TextView
                android:gravity="right"
                android:layout_weight=".3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="سعر المنتج"/>

            <TextView
                android:gravity="right"
                android:layout_weight=".3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="الكمية"/>

            <TextView
                android:gravity="right"
                android:layout_weight=".3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="الاسم"/>

        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:id="@+id/recycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>