<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:textColor="@color/colorAccent"
                android:src="@drawable/logo"/>

            <View
                android:layout_margin="10dp"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="اسم المنتج"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="22sp"/>

                <ImageView
                    android:id="@+id/ivImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/logo"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/tvPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="105"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/tvOffer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="105"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="22sp"/>

            </LinearLayout>

        </FrameLayout>


        <View
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_gravity="right"
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="النوع"/>

        <TextView
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:id="@+id/tvSeenCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/seen_count_format"/>

        <TextView
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/status_format"/>


        <View
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tvExtra"
                android:layout_weight=".5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="متوفر"/>

            <TextView
                android:layout_weight=".5"
                android:id="@+id/tvPriceTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/total_price_format"/>

        </LinearLayout>


        <com.travijuu.numberpicker.library.NumberPicker
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:id="@+id/npQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:min="1"
            app:max="100"
            app:value="1"
            app:unit="1"
            app:focusable="false" />

        <Button
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:id="@+id/bAdd"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:background="@drawable/button_style"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="اضف للسلة"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"/>

        <TextView
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="التفاصيل"/>


        <TextView
            android:id="@+id/tvDetails"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="التفاصيل"/>

    </LinearLayout>
</ScrollView>